2008-04-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Added new key binding: SUPER+F for file search

2008-04-07  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/eggcellrendererkeys.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Support for <super>, <hyper> and <meta> modifiers (since GTK+ 2.10)

2008-04-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/eggaccelerators.cc:
	* src/eggcellrendererkeys.cc:
	* src/gnome-cmd-key-shortcuts-dialog.cc:
	Use libegg cell renderer and accelerators

2008-03-31  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added gnome_cmd_user_actions_create_model() function

	* src/eggaccelerators.cc:
	* src/eggaccelerators.h:
	* src/eggcellrendererkeys.cc:
	* src/eggcellrendererkeys.h:
	Added libegg cell renderer and accelerators

2008-03-31  Thomas Kordelle

	* libgcmd/gnome-cmd-dialog.c:
	Fix for memory leak

	* src/gnome-cmd-con.cc:
	Fixed problem with copying files to symlinked directories

	* src/gnome-cmd-quicksearch-popup.cc:
	Allow Fx functions when in quicksearch mode editing

2008-03-26  Thomas Kordelle

	* src/gnome-cmd-search-dialog.cc:
	Bugfixes + added accelerators to the search dlg

2008-03-21  Leonardo Valeri Manera <l.valerimanera@gmail.com>

	* data/gnome-commander.ebuild:
	Updated ebuild file for gentoo systems

2008-03-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-key-shortcuts-dialog.cc:
	* src/gnome-cmd-key-shortcuts-dialog.h:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added GUI for keyboard shortcuts management

2008-03-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.h:
	Move key2str() and str2key() out of GnomeCmdUserActions class

2008-03-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	* src/gnome-cmd-file-list.cc: